@@ -1,15 +1,14 @@
 Package: stm
 Type: Package
 Title: Estimation of the Structural Topic Model
-Version: 1.1.4
-Date: 2016-03-04
+Version: 1.1.5
+Date: 2016-09-17
 Author: Margaret E. Roberts, Brandon M. Stewart and Dustin Tingley
 Maintainer: Brandon Stewart <bms4@princeton.edu>
 Depends: R (>= 2.10)
 LinkingTo: Rcpp, RcppArmadillo
-Imports: matrixStats, splines, slam, lda, stringr, Matrix, glmnet, Rcpp (>= 0.11.3), grDevices, graphics, stats, utils
-Suggests: igraph, SnowballC, tm (>= 0.6), huge, clue, wordcloud, KernSmooth, NLP, LDAvis, geometry, Rtsne,
-    testthat
+Imports: matrixStats, splines, slam, lda, stringr, Matrix, glmnet, Rcpp (>= 0.11.3), grDevices, graphics, stats, utils, data.table
+Suggests: igraph, SnowballC, tm (>= 0.6), huge, clue, wordcloud, KernSmooth, NLP, LDAvis, geometry, Rtsne
 LazyData: yes
 Description: The Structural Topic Model (STM) allows researchers 
   to estimate topic models with document-level covariates. 
