@@ -1,4 +1,4 @@
-// This file was generated by Rcpp::compileAttributes
+// Generated by using Rcpp::compileAttributes() -> do not edit by hand
 // Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
 #include <RcppArmadillo.h>
@@ -10,45 +10,45 @@ using namespace Rcpp;
 double lhoodcpp(SEXP eta, SEXP beta, SEXP doc_ct, SEXP mu, SEXP siginv);
 RcppExport SEXP stm_lhoodcpp(SEXP etaSEXP, SEXP betaSEXP, SEXP doc_ctSEXP, SEXP muSEXP, SEXP siginvSEXP) {
 BEGIN_RCPP
-    Rcpp::RObject __result;
-    Rcpp::RNGScope __rngScope;
+    Rcpp::RObject rcpp_result_gen;
+    Rcpp::RNGScope rcpp_rngScope_gen;
     Rcpp::traits::input_parameter< SEXP >::type eta(etaSEXP);
     Rcpp::traits::input_parameter< SEXP >::type beta(betaSEXP);
     Rcpp::traits::input_parameter< SEXP >::type doc_ct(doc_ctSEXP);
     Rcpp::traits::input_parameter< SEXP >::type mu(muSEXP);
     Rcpp::traits::input_parameter< SEXP >::type siginv(siginvSEXP);
-    __result = Rcpp::wrap(lhoodcpp(eta, beta, doc_ct, mu, siginv));
-    return __result;
+    rcpp_result_gen = Rcpp::wrap(lhoodcpp(eta, beta, doc_ct, mu, siginv));
+    return rcpp_result_gen;
 END_RCPP
 }
 // gradcpp
 arma::vec gradcpp(SEXP eta, SEXP beta, SEXP doc_ct, SEXP mu, SEXP siginv);
 RcppExport SEXP stm_gradcpp(SEXP etaSEXP, SEXP betaSEXP, SEXP doc_ctSEXP, SEXP muSEXP, SEXP siginvSEXP) {
 BEGIN_RCPP
-    Rcpp::RObject __result;
-    Rcpp::RNGScope __rngScope;
+    Rcpp::RObject rcpp_result_gen;
+    Rcpp::RNGScope rcpp_rngScope_gen;
     Rcpp::traits::input_parameter< SEXP >::type eta(etaSEXP);
     Rcpp::traits::input_parameter< SEXP >::type beta(betaSEXP);
     Rcpp::traits::input_parameter< SEXP >::type doc_ct(doc_ctSEXP);
     Rcpp::traits::input_parameter< SEXP >::type mu(muSEXP);
     Rcpp::traits::input_parameter< SEXP >::type siginv(siginvSEXP);
-    __result = Rcpp::wrap(gradcpp(eta, beta, doc_ct, mu, siginv));
-    return __result;
+    rcpp_result_gen = Rcpp::wrap(gradcpp(eta, beta, doc_ct, mu, siginv));
+    return rcpp_result_gen;
 END_RCPP
 }
 // hpbcpp
 SEXP hpbcpp(SEXP eta, SEXP beta, SEXP doc_ct, SEXP mu, SEXP siginv, SEXP sigmaentropy);
 RcppExport SEXP stm_hpbcpp(SEXP etaSEXP, SEXP betaSEXP, SEXP doc_ctSEXP, SEXP muSEXP, SEXP siginvSEXP, SEXP sigmaentropySEXP) {
 BEGIN_RCPP
-    Rcpp::RObject __result;
-    Rcpp::RNGScope __rngScope;
+    Rcpp::RObject rcpp_result_gen;
+    Rcpp::RNGScope rcpp_rngScope_gen;
     Rcpp::traits::input_parameter< SEXP >::type eta(etaSEXP);
     Rcpp::traits::input_parameter< SEXP >::type beta(betaSEXP);
     Rcpp::traits::input_parameter< SEXP >::type doc_ct(doc_ctSEXP);
     Rcpp::traits::input_parameter< SEXP >::type mu(muSEXP);
     Rcpp::traits::input_parameter< SEXP >::type siginv(siginvSEXP);
     Rcpp::traits::input_parameter< SEXP >::type sigmaentropy(sigmaentropySEXP);
-    __result = Rcpp::wrap(hpbcpp(eta, beta, doc_ct, mu, siginv, sigmaentropy));
-    return __result;
+    rcpp_result_gen = Rcpp::wrap(hpbcpp(eta, beta, doc_ct, mu, siginv, sigmaentropy));
+    return rcpp_result_gen;
 END_RCPP
 }
